--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,48 +33,25 @@
   with_items: network_ether_interfaces
   when: network_ether_interfaces is defined
   register: ether_result
+  notify:
+   - restart network
 
 - name: Write configuration files for rhel route configuration
   template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }} 
   with_items: network_ether_interfaces
   when: network_ether_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
 
-- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
-  with_items: ether_result.results
-  when: ether_result is defined and item.changed
-
-- name: Create the network configuration file for bridge devices
-  template: src=bridge_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.device }}
-  with_items: network_bridge_interfaces
-  when: network_bridge_interfaces is defined 
-  register: bridge_result
-
-- name: Write configuration files for rhel route configuration
-  template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }} 
-  with_items: network_bridge_interfaces
-  when: network_bridge_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
-
-- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
-  with_items: bridge_result.results
-  when: bridge_result is defined and item.changed
- 
-- name: Create the network configuration file for port on the bridge devices
-  template: src=bridge_port_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.1 }}
-  with_subelements: 
-   - network_bridge_interfaces
-   - ports
-  when: network_bridge_interfaces is defined 
-  register: bridge_port_result
-
-- shell: ifdown {{ item.item.1 }}; ifup {{ item.item.1 }}
-  with_items: bridge_port_result.results
-  when: bridge_port_result is defined and item.changed
+#- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
+#  with_items: ether_result.results
+#  when: ether_result is defined and item.changed
 
 - name: Create the network configuration file for bond devices
   template: src=bond_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.device }}
   with_items: network_bond_interfaces
   when: network_bond_interfaces is defined
   register: bond_result
+  notify:
+   - restart network
 
 - name: Make sure the bonding module is loaded
   modprobe: name=bonding state=present
@@ -84,23 +61,75 @@
   template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }} 
   with_items: network_bond_interfaces
   when: network_bond_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
+  notify:
+   - restart network
 
-- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
-  with_items: bond_result.results
-  when: bond_result is defined and item.changed
+#- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
+#  with_items: bond_result.results
+#  when: bond_result is defined and item.changed
 
 - name: Create the network configuration file for slave in the bond devices
   template: src=bond_slave_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.1 }}
-  with_subelements: 
+  with_subelements:
    - network_bond_interfaces
    - bond_slaves
   when: network_bond_interfaces is defined
   register: bond_port_result
+  notify:
+   - restart network
 
-- shell: ifdown {{ item.item.1 }}; ifup {{ item.item.1 }}
-  with_items: bond_port_result.results
-  when: bond_port_result is defined and item.changed
+#- shell: ifdown {{ item.item.1 }}; ifup {{ item.item.1 }}
+#  with_items: bond_port_result.results
+#  when: bond_port_result is defined and item.changed
 
-- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
-  with_items: bond_result.results
-  when: bond_result is defined and item.changed and ansible_os_family == 'RedHat'
+#- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
+#  with_items: bond_result.results
+#  when: bond_result is defined and item.changed and ansible_os_family == 'RedHat'
+
+- name: Create the network configuration file for vlan devices
+  template: src=ethernet_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.device }}
+  with_items: network_vlan_interfaces
+  when: network_vlan_interfaces is defined
+  register: vlan_result
+  notify:
+   - restart network
+
+- name: Write configuration files for rhel route configuration with vlan
+  template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }} 
+  with_items: network_vlan_interfaces
+  when: network_vlan_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
+  notify:
+   - restart network
+
+#- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
+#  with_items: vlan_result.results
+#  when: vlan_result is defined and item.changed
+
+- name: Create the network configuration file for bridge devices
+  template: src=bridge_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.device }}
+  with_items: network_bridge_interfaces
+  when: network_bridge_interfaces is defined
+  register: bridge_result
+  notify:
+   - restart network
+
+- name: Write configuration files for rhel route configuration
+  template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }}
+  with_items: network_bridge_interfaces
+  when: network_bridge_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
+  notify:
+   - restart network
+
+#- shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
+#  with_items: bridge_result.results
+#  when: bridge_result is defined and item.changed
+
+- name: Create the network configuration file for port on the bridge devices
+  lineinfile: dest={{ net_path }}/ifcfg-{{ item.1 }} regexp='^BRIDGE=' line=BRIDGE={{ item.0.device }}
+  with_subelements:
+    - network_bridge_interfaces
+    - ports
+  when: network_bridge_interfaces is defined
+  register: bridge_port_result
+  notify:
+   - restart network
