--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Install the required  packages in Redhat derivatives
   yum: name={{ item }} state=installed
   with_items: network_pkgs
-  when: ansible_os_family == 'RedHat'
+  when: ansible_os_family == 'RedHat' and network_check_packages
 
 - name: Install the required packages in Debian derivatives
   apt: name={{ item }} state=installed update_cache=yes
