--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,4 @@ network_ether_interfaces: []
 network_bridge_interfaces: []
 network_bond_interfaces: []
 network_check_packages: true
+network_allow_service_restart: true
