ansible2 likes to quote the with_item variables

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,12 +4,12 @@
 
 - name: Install the required  packages in Redhat derivatives
   yum: name={{ item }} state=installed
-  with_items: network_pkgs
+  with_items: "{{ network_pkgs }}"
   when: ansible_os_family == 'RedHat' and network_check_packages
 
 - name: Install the required packages in Debian derivatives
   apt: name={{ item }} state=installed update_cache=yes
-  with_items: network_pkgs
+  with_items: "{{ network_pkgs }}"
   environment: env
   when: ansible_os_family == 'Debian'
 
@@ -28,7 +28,7 @@
 
 - name: Create the network configuration file for ethernet devices
   template: src=ethernet_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.device }}
-  with_items: network_ether_interfaces
+  with_items: "{{ network_ether_interfaces }}”
   when: network_ether_interfaces is defined
   register: ether_result
   notify:
@@ -36,12 +36,12 @@
 
 - name: Write configuration files for rhel route configuration
   template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }} 
-  with_items: network_ether_interfaces
+  with_items: "{{ network_ether_interfaces }}”
   when: network_ether_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
 
 - name: Create the network configuration file for bond devices
   template: src=bond_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.device }}
-  with_items: network_bond_interfaces
+  with_items: "{{ network_bond_interfaces }}"
   when: network_bond_interfaces is defined
   register: bond_result
   notify:
@@ -53,7 +53,7 @@
 
 - name: Write configuration files for route configuration
   template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }} 
-  with_items: network_bond_interfaces
+  with_items: "{{ network_bond_interfaces }}"
   when: network_bond_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
   notify:
    - restart network
@@ -70,7 +70,7 @@
 
 - name: Create the network configuration file for vlan devices
   template: src=ethernet_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.device }}
-  with_items: network_vlan_interfaces
+  with_items: "{{ network_vlan_interfaces }}"
   when: network_vlan_interfaces is defined
   register: vlan_result
   notify:
@@ -78,14 +78,14 @@
 
 - name: Write configuration files for rhel route configuration with vlan
   template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }} 
-  with_items: network_vlan_interfaces
+  with_items: "{{ network_vlan_interfaces }}"
   when: network_vlan_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
   notify:
    - restart network
 
 - name: Create the network configuration file for bridge devices
   template: src=bridge_{{ ansible_os_family }}.j2 dest={{ net_path }}/ifcfg-{{ item.device }}
-  with_items: network_bridge_interfaces
+  with_items: "{{ network_bridge_interfaces }}"
   when: network_bridge_interfaces is defined
   register: bridge_result
   notify:
@@ -93,7 +93,7 @@
 
 - name: Write configuration files for rhel route configuration
   template: src=route_{{ ansible_os_family }}.j2 dest={{ net_path }}/route-{{ item.device }}
-  with_items: network_bridge_interfaces
+  with_items: "{{ network_bridge_interfaces }}”
   when: network_bridge_interfaces is defined and item.route is defined and ansible_os_family == 'RedHat'
   notify:
    - restart network
