--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
 env:
   - IMAGE_BUILD_PLATFORM=stable-centos7
   - IMAGE_BUILD_PLATFORM=devel-centos7
+  - IMAGE_BUILD_PLATFORM=ansible-min-version-centos7
+
 install:
   - npm install -g validate-dockerfile
 
@@ -28,21 +30,26 @@ before_script:
   - docklint ${TESTDIR}/${IMAGE_BUILD_PLATFORM}/Dockerfile
   # Build the image
   - docker build -t ${REPO}:${IMAGE_BUILD_PLATFORM} ${TESTDIR}/${IMAGE_BUILD_PLATFORM}/
+  # Find out min_ansible_version
+  - export MIN_ANSIBLE_VERSION=$(grep min_ansible_version meta/main.yml|cut -d ':' -f2|xargs)
+  - echo "INFO min_ansible_version $MIN_ANSIBLE_VERSION"
   # Launch the container
   - docker run --privileged -d -ti -e "container=docker"  -v `pwd`:/$ROLETOTEST -v /sys/fs/cgroup:/sys/fs/cgroup  ${REPO}:${IMAGE_BUILD_PLATFORM}  /usr/sbin/init
   - DOCKER_CONTAINER_ID=$(docker ps | grep ${IMAGE_BUILD_PLATFORM} | awk '{print $1}')
+  # If ansible-min-version install it with pip
+  - if [ "$IMAGE_BUILD_PLATFORM" == "ansible-min-version-centos7" ]; then docker exec -ti $DOCKER_CONTAINER_ID /bin/sh -c "/usr/bin/pip install ansible==$MIN_ANSIBLE_VERSION"; fi
   - docker logs $DOCKER_CONTAINER_ID
 script:
   # Testing of this ansible-role:
   - docker exec -ti $DOCKER_CONTAINER_ID /bin/sh -c "/$ROLETOTEST/tests/test-in-docker-image.sh"
 after_script:
+  # Print some logs and other useful information for debugging travis:
   - >
     docker exec -ti $DOCKER_CONTAINER_ID /bin/sh -c 'echo -ne "------\nEND ANSIBLE TESTS\n------\nSystemD Units:\n------\n";
        systemctl --no-pager --all --full status ;
        echo -ne "------\nJournalD Logs:\n------\n" ;
        sudo journalctl --catalog --all --full --no-pager'
   - docker exec -ti $DOCKER_CONTAINER_ID /bin/sh -c 'tree /ansible*'
-  - docker exec -ti $DOCKER_CONTAINER_ID /bin/sh -c 'tree /etc'
   - docker ps -a
   - docker stop $DOCKER_CONTAINER_ID
   - docker rm -v $DOCKER_CONTAINER_ID
