Allow setting bonding module options
 - The template was there but from history never used?
 - Added possibility to set NOZEROCONF=yes - in case you don't need the
   169.254.0.0 from every interface

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,5 @@ network_bond_interfaces: []
 network_vlan_interfaces: []
 network_check_packages: true
 network_allow_service_restart: true
+bond_modules_path: "/etc/modprobe.d"
+network_extra_bonding_module_options: ""
