Ansible deprecation fixes and bond over VLAN (#16)
* Enable bond over vlan over physical interface scenario

See README.md for further information

* yum call deprecation fix

[DEPRECATION WARNING]: Invoking "yum" only once while using a loop via squash_actions is deprecated.

* apt call deprecation fix

Same fix as for yum

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,13 +10,17 @@
   include_vars: "{{ ansible_os_family }}.yml"
 
 - name: Install the required  packages in Redhat derivatives
-  yum: name={{ item }} state=installed
-  with_items: "{{ network_pkgs }}"
+  yum:
+    name: "{{ network_pkgs }}"
+  vars:
+     packages:  "{{ network_pkgs }}"
   when: ansible_os_family == 'RedHat' and network_check_packages
 
 - name: Install the required packages in Debian derivatives
-  apt: name={{ item }} state=installed update_cache=yes
-  with_items: "{{ network_pkgs }}"
+  apt:
+    name: "{{ network_pkgs }}"
+  vars:
+     packages:  "{{ network_pkgs }}"
   environment: env
   when: ansible_os_family == 'Debian'
 
@@ -74,6 +78,7 @@
   with_subelements:
    - "{{network_bond_interfaces}}"
    - bond_slaves
+
   when: network_bond_interfaces is defined
   register: bond_port_result
   notify:
