Fix network restart on Debian distributions.
Using service restart network on recent Debian releases does not
properly bring up all networks, use ifup/ifdown -a instead.

NB: ifup -a only brings up interfaces marked "auto", whilst ifdown -a
will take down *all* interfaces! Make sure all interfaces that need to
be restarted are qualified as "auto".

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,11 @@
 ---
-- name: restart network
+- name: restart network with service
   service: name=network state=restarted
-  when: network_allow_service_restart
+  when: network_allow_service_restart and ansible_os_family == 'RedHat'
+  listen: "restart network"
+
+- name: restart network with ifupdown
+  #shell: ifdown {{ item.item.device }}; ifup {{ item.item.device }}
+  shell: ifdown -a; ifup -a
+  when: network_allow_service_restart and ansible_os_family == "Debian"
+  listen: "restart network"
