--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 network_pkgs: []
-network_ether_interfaces: []
+network_ether_interfaces: {}
 network_bridge_interfaces: []
 network_bond_interfaces: []
 network_vlan_interfaces: []
